kubernetes/helm_charts/nginx-ingress/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
  name: apple.prod.phuongna.com  
spec:
  ingressClassName: nginx
  rules:
  - host: apple.prod.phuongna.com
    http:
      paths:
      - backend:
          service:
            name: apple-service
            port:
              number: 5678
        path: /
        pathType: Prefix
